fix padding on mobile

--- a/main.css
+++ b/main.css
@@ -1,10 +1,10 @@
 body {
   margin: 2.5vh auto 100vh;
-  padding: 2rem;
+  padding: 1rem;
   width: 95vw;
   background-color: #000;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 4rem;
+  font-size: 3.5rem;
   color: var(--bodytext);
   user-select: none;
   --bodytext: #d2d2d2;
@@ -18,7 +18,7 @@ body {
   padding: 0.12rem;
 }
 
-#info {
+#cv {
   font-size: 2rem;
 }
 
@@ -31,10 +31,17 @@ a:hover, .copy:hover {
   text-decoration: underline;
 }
 
+@media screen and (min-width: 440px) {
+  body {
+    padding: 2rem;
+    font-size: 4rem;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .collapse {
     display: flex;
-  }  
+  }
 }
 
 .lspacer {
